--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -12,7 +12,10 @@
   "extends": [
     "eslint:recommended",
     "plugin:@typescript-eslint/recommended",
-    "plugin:react/recommended"
+    "plugin:react/recommended",
+    "plugin:react-hooks/recommended",
+    "plugin:prettier/recommended",
+    "prettier"
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
@@ -22,11 +25,40 @@
   "plugins": [
     "@typescript-eslint",
     "react",
-    "react-hooks"
+    "react-hooks",
+    "eslint-plugin-import-helpers"
   ],
   "rules": {
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
-    "react/react-in-jsx-scope": "off"
+    "react/react-in-jsx-scope": "off",
+    "prettier/prettier": "error",
+    "indent": ["error", 2],
+    "linebreak-style": ["error", "unix"],
+    "quotes": ["error", "single"],
+    "semi": ["error", "always"],
+    "jsx-quotes": [2, "prefer-double"],
+    "eol-last": ["error", "always"],
+    "import-helpers/order-imports": [
+        "warn",
+        {
+          "newlinesBetween": "always", // Cria uma nova linha para separar as importacoes
+          "groups": [
+            ["/^react/", "/^next/"],
+            "module",
+            "/^@shared/",
+            "absolute",
+            "/^components/",
+            "/^pages/",
+            "/utils/",
+            "/constants/",
+            "/^store/",
+            "/^styles/",
+            "/^templates/",
+            ["parent", "sibling", "index"]
+          ],
+          "alphabetize": { "order": "asc", "ignoreCase": true }
+        }
+    ]
     }
 }
